--- a/2-js-exercice-dom/index.html
+++ b/2-js-exercice-dom/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/d6d9c957f0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Template</h1>
+    
 
     <script src="./js/index.js"></script>
 </body>
